plugins {
    id 'java'
}

compileJava.options.encoding = 'UTF-8'
tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.javaModuleVersion = '1.8'
}

group 'github.com/darksoldier1404'
version = '1.0.0.2'
configurations {
    jar.archiveName = 'DP-RPG-_' + name + '-' + version + '.jar'
}
build {
    sourceCompatibility = 1.8
    targetCompatibility = 1.8
}
jar{
    destinationDirectory.set(file("$rootDir/jars"))
}
repositories {
    mavenCentral()
    maven {
        url "http://dpp.dpnw.site:8081/repository/maven-public/"
        allowInsecureProtocol = true
    }
}

dependencies {
    implementation 'org.jetbrains:annotations:22.0.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
    compileOnly 'org.spigotmc:spigot-api:R0.1:1.13.2'
    compileOnly 'org.bukkit.craftbukkit:craftbukkit:R0.1:1.13.2'
    compileOnly 'com.darksoldier1404.dppc:DPP-Core:1.13.2-SNAPSHOT'
    compileOnly 'io.lumine.xikage.mythicmobs:MythicMobs:4.14.2'
}

test {
    useJUnitPlatform()
}